# Capstone1

./: Computer_player.py  Scrabble.py  direcFunc.py  rules.py  validword.py
Scrabble/: pyproject.toml
Scrabble/scrabble/: Scrabble.py  board.ini  board.py  scenes.py  tiles.ini
